--- a/src/compenents/rightbar/rightbar.css
+++ b/src/compenents/rightbar/rightbar.css
@@ -40,26 +40,30 @@
     margin: 0;
     list-style: none; 
 }
-.rightbarFriend{
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
+.rightbarTitle{
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    margin-left: 10px;
 }
-.rightbarProfileImgContainer{
-    margin-right: 10px;
-    position: relative;
-}
-.rightbarProfileImg{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+.rightbarFollowingImg{
+    width: 100px;
+    height: 100px;
+    border-radius: 5px;
     object-fit: cover;
 }
-.rightbarOnline{
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: lime;
-    position: absolute;
-    border: 2px solid white;
+.rightbarInfoItem{
+    margin-bottom: 10px;
+}
+.rightInfoKey{
+    margin-right: 10px;
+    margin-left: 10px ;
+    font-weight: 500;
+    color: dimgray;
+}
+.rightbarInfoValue{
+    font-weight: 500;
+}
+.rightbarFollowings{
+    margin-left: 10px ;
 }
