--- a/src/compenents/post/post.css
+++ b/src/compenents/post/post.css
@@ -2,8 +2,9 @@
     width: 100%;
     border-radius: 10px;
     margin: 30px 0;
-    -webkit-box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.65); 
-    box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.65); 
+    background-color: white;
+    -webkit-box-shadow: -3px 2px 17px -10px #000000; 
+    box-shadow: -3px 2px 17px -10px #000000; 
 }
 
 .postWrapper{
