--- a/src/compenents/rightbar/rightbar.css
+++ b/src/compenents/rightbar/rightbar.css
@@ -1,11 +1,21 @@
 .rightbar {
-    flex: 4;
-    width: 100%;
-    min-height: 500px;
-    margin: 20px 0;
+    flex: 3;
+    height: 100vh;
+    overflow-y :scroll;
+    position: sticky;
+    top: 50px;
+    border: solid 2px #546e7a;
     border-radius: 10px;
-    -webkit-box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 5px 4px 37px -1px #000000; 
-    box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 5px 4px 37px -1px #000000;
+    margin-top: 20px;
+}
+::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar-track{
+    background-color: white;
+}
+::-webkit-scrollbar-thumb{
+    background-color:darkgray;
 }
 
 .rightbarContainer{
@@ -32,8 +42,10 @@
     font-size: 15px;
 }
 .hello{
-    width: 100%;
+    width: 60%;
     height: 180px;
+    margin-left: 80px;
+    border-radius: 20%;
 }
 .rightbarFriendList{
     padding: 0;
