--- a/src/compenents/share/share.css
+++ b/src/compenents/share/share.css
@@ -1,9 +1,10 @@
 .share{
     width: 100%;
     height: 170px;
+    background-color: white;
     border-radius: 10px;
-    -webkit-box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.65); 
-    box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.65); 
+    -webkit-box-shadow: -3px 2px 17px -10px #000000; 
+    box-shadow: -3px 2px 17px -10px #000000;
 }
 
 .shareTop{
