--- a/src/compenents/topbar/topbar.css
+++ b/src/compenents/topbar/topbar.css
@@ -1,27 +1,26 @@
 .topbarContainer{
     height: 50px;
     width: 100%;
-    background-color:cornflowerblue;
+    background-color: white;
     display: flex;
     align-items: center;
     position: sticky;
     top: 0;
     z-index: 999;
-    
-}
+}   
  
 .logo{
     font-size: 24px;
     margin-left: 20px;
     font-weight: bold;
-    color:white;
+    color: #546e7a;
     cursor: pointer;
 }
 
 .searchbar{
     width: 100%;
     height: 30px;
-    background-color: white;
+    background-color: #b0bec5;
     border-radius: 30px;
     display: flex;
     align-items: center;
@@ -53,7 +52,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    color:white;
+    color: #546e7a;
 }
 .topbarLink{
     margin-right: 10px;
@@ -67,7 +66,7 @@
    margin-right: 15px;
    cursor: pointer;
    position: relative;
-   color: white;
+   color: #546e7a;
 }
 .topbarIconBadge{
     width: 15px;
