--- a/src/compenents/rightbar/rightbar.css
+++ b/src/compenents/rightbar/rightbar.css
@@ -8,6 +8,22 @@
     border-radius: 10px;
     margin-top: 20px;
 }
+
+@media  (max-width: 1024px) {
+    .rightbar{ 
+      flex: 2; 
+    } }
+
+@media  (max-width: 768px) {
+        .rightbar .hello{ 
+          display: none; 
+        } 
+        .rightbar {
+            border: none;
+        }    
+    
+    }
+
 ::-webkit-scrollbar {
     width: 5px;
 }
