--- a/src/compenents/topbar/topbar.css
+++ b/src/compenents/topbar/topbar.css
@@ -17,6 +17,10 @@
     color:white;
     cursor: pointer;
 }
+a {
+    text-decoration: none;
+}
+
 
 .searchbar{
     width: 100%;
@@ -57,8 +61,9 @@
 }
 .topbarLink{
     margin-right: 10px;
-    font-size: 14px;
+    font-size: 20px;
     cursor: pointer;
+    color:white;
 }
 .topbarIcons{
   display: flex;
