add chat activity

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -54,6 +54,9 @@
     font-size: 25px;
     cursor: pointer;
 }
+.loginButton:focus{
+    outline: none;
+}
 .loginForgot{
     text-align: center;
     color: royalblue;
