--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -63,6 +63,7 @@
     background-color: #42b72a;
     border-radius: 10px;
     color: white;
+    margin-left: 100px;
     font-size: 20px;
     cursor: pointer;
 }
