--- a/src/compenents/post/post.css
+++ b/src/compenents/post/post.css
@@ -9,6 +9,11 @@
 .postWrapper{
     padding: 10px;
 }
+.postDate{
+    margin-left: 10px ;
+    font-size: 12px;
+    font-weight: 500;
+}
 .postTop{
     display: flex;
     align-items: center;
@@ -45,8 +50,8 @@
     justify-content: space-between;
 }
 .aimer{
-    width: 32px;
-    height: 32px;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
 }
 .postBottomLeft{
