--- a/src/compenents/rightbar/rightbar.css
+++ b/src/compenents/rightbar/rightbar.css
@@ -35,6 +35,19 @@
     width: 100%;
     height: 180px;
 }
+.rightbarFollowings{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.rightbarFollowing{
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.rightbarFollowingName{
+    margin-left: 20px;
+}
 .rightbarFriendList{
     padding: 0;
     margin: 0;
@@ -47,8 +60,8 @@
     margin-left: 10px;
 }
 .rightbarFollowingImg{
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     border-radius: 5px;
     object-fit: cover;
 }
@@ -66,4 +79,32 @@
 }
 .rightbarFollowings{
     margin-left: 10px ;
+}
+
+.rightbarFollowButton{
+    margin-left: 90px;
+    border: none;
+    background-color: blue;
+    color: white;
+    border-radius: 5px;
+    padding: 5px 10px;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.rightbarUnFollowButton{
+    margin-left: 80px;
+    margin-bottom: 10px;
+    border: none;
+    background-color: blue;
+    color: white;
+    border-radius: 5px;
+    padding: 5px 10px;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
 }
