--- a/src/pages/chat/chat.css
+++ b/src/pages/chat/chat.css
@@ -1,7 +1,7 @@
 .messenger {
     height: calc(100vh - 70px);
     display: flex;
-    background-color:lightcyan;
+    background-color:gray;
 }
 .chatMenu{
     flex: 3.5;
@@ -21,6 +21,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: #808285;
+    border-radius: 10px;
 }
 .chatBoxTop{
     height: 100%;
@@ -58,7 +60,7 @@
     position: absolute;
     top : 200px;
     font-size: 30px;
-    color:gray;
+    color:white;
     cursor: default;
     text-align: center;
 }
