--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -7,7 +7,7 @@
     justify-content: center;
 }
 .loginWrapper{
-    width: 70%;
+    width: 50%;
     height: 70%;
     display: flex;
 }
@@ -27,16 +27,16 @@
     font-size: 18px;
 }
 .loginBox{
-    height: 300px;
+    height: 200px;
     padding: 20px;
-    background-color: white;
+    background-color:black;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 .loginInput,.loginPassword{
-    height: 50px;
+    height: 10px;
     border-radius: 10px;
     border: solid 1px gray;
     font-size: 14px;
@@ -66,6 +66,7 @@
     background-color: #42b72a;
     border-radius: 10px;
     color: white;
-    font-size: 25px;
+    margin-left: 100px;
+    font-size: 20px;
     cursor: pointer;
 }
