--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -7,7 +7,7 @@
     justify-content: center;
 }
 .loginWrapper{
-    width: 70%;
+    width: 40%;
     height: 70%;
     display: flex;
 }
@@ -48,7 +48,7 @@
 }
 .loginButton{
     height: 50px;
-    background-color: royalblue;
+    background-color : gray;
     border-radius: 10px;
     color: white;
     font-size: 20px;
@@ -60,10 +60,12 @@
 }
 .loginCreate{
     height: 50px;
-    background-color: #42b72a;
+    background-color:#443E3D;
     border-radius: 10px;
     color: white;
     margin-left: 100px;
     font-size: 20px;
     cursor: pointer;
+    margin-right: 60px;
+    margin-left: 80px;
 }
